; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_SchemaOwnerName.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_SchemaOwnerName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@InvalidOid = common dso_local global i32 0, align 4
@NAMESPACEOID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @SchemaOwnerName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @SchemaOwnerName(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %3, align 8
  %6 = load i32, i32* @InvalidOid, align 4
  store i32 %6, i32* %4, align 4
  store i8* null, i8** %5, align 8
  %7 = load i32, i32* @NAMESPACEOID, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @ObjectIdGetDatum(i32 %8)
  %10 = call i32* @SearchSysCache1(i32 %7, i32 %9)
  store i32* %10, i32** %3, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @HeapTupleIsValid(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = call i64 @GETSTRUCT(i32* %15)
  %17 = inttoptr i64 %16 to %struct.TYPE_2__*
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %4, align 4
  br label %22

20:                                               ; preds = %1
  %21 = call i32 (...) @GetUserId()
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %20, %14
  %23 = load i32, i32* %4, align 4
  %24 = call i8* @GetUserNameFromId(i32 %23, i32 0)
  store i8* %24, i8** %5, align 8
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @ReleaseSysCache(i32* %25)
  %27 = load i8*, i8** %5, align 8
  ret i8* %27
}

declare dso_local i32* @SearchSysCache1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i64 @HeapTupleIsValid(i32*) #1

declare dso_local i64 @GETSTRUCT(i32*) #1

declare dso_local i32 @GetUserId(...) #1

declare dso_local i8* @GetUserNameFromId(i32, i32) #1

declare dso_local i32 @ReleaseSysCache(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
